# agent_tui

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.ai_history/logs/: 2026-06-26-agent-harness-basics.md  2026-06-26-controlled-shell-plan.md  2026-06-26-controlled-shell-tool.md  2026-06-26-file-tools-workspace-guard.md  2026-06-26-hello-agents-lessons.md  2026-06-26-openai-compatible-provider.md  2026-06-26-permission-gate.md
deliverables/: run-log.md
docs/: 00-implementation-plan.md  06-build-verification.md  09-permission-gate-design.md  11-controlled-shell-tool-design.md  12-controlled-shell-tool-verification.md  16-session-history-audit-log-verification.md  17-minimal-tui-config-interrupt-design.md  19-config-provider-terminal-chat-design.md  21-openai-compatible-provider-design.md  24-local-intent-router-verification.md  26-file-manager-tools-verification.md  27-pi-codex-tooling-roadmap.md
docs/superpowers/plans/: 2026-06-29-agent-runtime-observability.md
include/agent_tui/agent/: AgentRunner.hpp  Message.hpp  ToolCall.hpp
include/agent_tui/config/: Config.hpp  ConfigLoader.hpp
include/agent_tui/context/: ContextManager.hpp
include/agent_tui/filesystem/: AllowedRoots.hpp
include/agent_tui/intent/: IntentClassifier.hpp
include/agent_tui/llm/: EchoProvider.hpp  MockProvider.hpp  OpenAICompatibleProvider.hpp  Provider.hpp  ProviderFactory.hpp
include/agent_tui/permissions/: Approval.hpp
include/agent_tui/session/: SessionEvent.hpp
include/agent_tui/tools/: FileManagerTools.hpp  FileTools.hpp  ShellTool.hpp  Tool.hpp  ToolRegistry.hpp  WriteEditTools.hpp
include/agent_tui/trace/: TraceAdapter.hpp
include/agent_tui/tui/: TuiApp.hpp  TuiTranscript.hpp
scripts/: build.ps1  build.sh
tests/: test_agent_runner.cpp  test_config_loader.cpp  test_context_manager.cpp  test_file_manager_tools.cpp  test_file_tools.cpp  test_openai_compatible_provider.cpp  test_permission_gate.cpp  test_session_history.cpp  test_shell_tool.cpp  test_trace_adapter.cpp  test_tui_app.cpp  test_write_edit_tools.cpp
