cmake_minimum_required(VERSION 3.19)

project(agent_tui VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(agent_tui_core INTERFACE)
target_include_directories(agent_tui_core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(agent_tui src/main.cpp)
target_link_libraries(agent_tui PRIVATE agent_tui_core)

add_executable(agent_tui_tests tests/test_agent_runner.cpp)
target_link_libraries(agent_tui_tests PRIVATE agent_tui_core)

add_executable(agent_tui_file_tools_tests tests/test_file_tools.cpp)
target_link_libraries(agent_tui_file_tools_tests PRIVATE agent_tui_core)

add_executable(agent_tui_permission_gate_tests tests/test_permission_gate.cpp)
target_link_libraries(agent_tui_permission_gate_tests PRIVATE agent_tui_core)

add_executable(agent_tui_shell_tool_tests tests/test_shell_tool.cpp)
target_link_libraries(agent_tui_shell_tool_tests PRIVATE agent_tui_core)

add_executable(agent_tui_write_edit_tools_tests tests/test_write_edit_tools.cpp)
target_link_libraries(agent_tui_write_edit_tools_tests PRIVATE agent_tui_core)

add_executable(agent_tui_session_history_tests tests/test_session_history.cpp)
target_link_libraries(agent_tui_session_history_tests PRIVATE agent_tui_core)

add_executable(agent_tui_app_tests tests/test_tui_app.cpp)
target_link_libraries(agent_tui_app_tests PRIVATE agent_tui_core)

add_executable(agent_tui_config_loader_tests tests/test_config_loader.cpp)
target_link_libraries(agent_tui_config_loader_tests PRIVATE agent_tui_core)

add_executable(agent_tui_openai_compatible_provider_tests tests/test_openai_compatible_provider.cpp)
target_link_libraries(agent_tui_openai_compatible_provider_tests PRIVATE agent_tui_core)

add_executable(agent_tui_intent_classifier_tests tests/test_intent_classifier.cpp)
target_link_libraries(agent_tui_intent_classifier_tests PRIVATE agent_tui_core)

add_executable(agent_tui_file_manager_tools_tests tests/test_file_manager_tools.cpp)
target_link_libraries(agent_tui_file_manager_tools_tests PRIVATE agent_tui_core)

enable_testing()
add_test(NAME agent_tui_tests COMMAND agent_tui_tests)
add_test(NAME agent_tui_file_tools_tests COMMAND agent_tui_file_tools_tests)
add_test(NAME agent_tui_permission_gate_tests COMMAND agent_tui_permission_gate_tests)
add_test(NAME agent_tui_shell_tool_tests COMMAND agent_tui_shell_tool_tests)
add_test(NAME agent_tui_write_edit_tools_tests COMMAND agent_tui_write_edit_tools_tests)
add_test(NAME agent_tui_session_history_tests COMMAND agent_tui_session_history_tests)
add_test(NAME agent_tui_app_tests COMMAND agent_tui_app_tests)
add_test(NAME agent_tui_config_loader_tests COMMAND agent_tui_config_loader_tests)
add_test(NAME agent_tui_openai_compatible_provider_tests COMMAND agent_tui_openai_compatible_provider_tests)
add_test(NAME agent_tui_intent_classifier_tests COMMAND agent_tui_intent_classifier_tests)
add_test(NAME agent_tui_file_manager_tools_tests COMMAND agent_tui_file_manager_tools_tests)
